DuPont DevSB/src/objects/elear__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AM1__c</fullName>
        <label>Safety, E&amp;C, Gov1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AM2__c</fullName>
        <label>Safety, E&amp;C, Gov2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AM3__c</fullName>
        <label>Safety, E&amp;C, Gov3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D10__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Non-Premium Skills constants</description>
        <inlineHelpText>Non-Premium Skills constants</inlineHelpText>
        <label>Non-Premium Skills10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D11__c</fullName>
        <defaultValue>4</defaultValue>
        <description>Non-Premium Skills constants</description>
        <inlineHelpText>Non-Premium Skills constants</inlineHelpText>
        <label>Non-Premium Skills11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D12__c</fullName>
        <defaultValue>3.2</defaultValue>
        <description>Non-Premium Skills constants</description>
        <inlineHelpText>Non-Premium Skills constants</inlineHelpText>
        <label>Non-Premium Skills12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_C1__c</fullName>
        <description>Constant C(All Other Survey Cost )</description>
        <label>All Other Survey Cost C1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_C2__c</fullName>
        <description>Constant 2 (All Other Survey Cost )</description>
        <label>All Other Survey Cost C2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_C3__c</fullName>
        <description>Constant 3 (All Other Survey Cost C3)</description>
        <label>All Other Survey Cost C3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Elear_Additional_Participants_Pri__c</fullName>
        <label>Additional Participant Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Elear_No_Decentralized_till_3__c</fullName>
        <label>DES LMS No Decentralized Less than 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Elear_Yes_Decentralized_till_3__c</fullName>
        <label>DES LMS Yes Less than 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Hosting_3rd_party_content_on_SMB__c</fullName>
        <label>Hosting 3rd party content on SMB yearly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Migration_of_C3_from_CES_to_SMB__c</fullName>
        <description>Migration of C3 course from CES to SMB per</description>
        <label>PerCourseMigrationof C3 from CES to SMB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_SMB_Services_Annual_Fee__c</fullName>
        <label>SMB Services Annual Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_eLear_AT_Courses_Greater_100__c</fullName>
        <label>Authoring Tool Greater 100 Courses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_eLear_AT_Courses_less_29__c</fullName>
        <label>Authoring Tool less than 29</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_eLear_DES_LMS_No_Centralized__c</fullName>
        <label>DES LMS No Centralized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_eLear_DES_LMS_Yes_Centralized__c</fullName>
        <label>DES LMS Yes Centralized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_eLear_Import_Routine_Setup_DES__c</fullName>
        <label>User  Profile Import Routine Setup DES</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_eLear_No_Decentralized_Great_3__c</fullName>
        <label>DES LMS No Decentralized &gt;3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_eLear_Price_BeachOffice__c</fullName>
        <label>Beach Office Participants Prices</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_eLear_Price_ClientSide__c</fullName>
        <label>Client Side Participants Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_eLear_TrainingData_Export_Routine__c</fullName>
        <label>Training Data Export Routine Setup DES</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_eLear_Travel_and_Living_Price__c</fullName>
        <label>Travel and Living Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_eLear_User_Upload_LMS_DES__c</fullName>
        <label>Post-launch User Upload in LMS/DES</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_eLear_Yes_Decentralized_Great_3__c</fullName>
        <label>DES LMS Yes Decentralized &gt;3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_elear_AB_10000_Emp__c</fullName>
        <label>Assessment Builder &gt;=10000 Emp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_elear_AB_2500_9999_Emp__c</fullName>
        <label>Assessment Builder 2500-9999 Emp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_elear_AB_500_2499_Emp__c</fullName>
        <label>Assessment Builder 500-2499 Emp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_elear_AB_500_Emp__c</fullName>
        <label>Assessment Builder &lt; 500 Emp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_elear_AT_Course_30_99__c</fullName>
        <label>Authoring Tool 30 - 99</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_elear_Customized_Courses__c</fullName>
        <label>Provide customized courses Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_elear_DES_greater_30000__c</fullName>
        <label>DES Enterprise Users greater than 30000</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_elear_DES_less_30000__c</fullName>
        <label>DES Enterprise Users less than 30000</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_elear_Hosting_3_Party__c</fullName>
        <label>Hosting 3rd party Content on CoastalServ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_elear_Refresher_training__c</fullName>
        <label>Refresher training via phone,4-hourblock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_elear_Scorm_Enterprises_Support__c</fullName>
        <label>Scorm Enterprises Support Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HT1__c</fullName>
        <label>Health Train1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HT2__c</fullName>
        <label>Health Train2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HT3__c</fullName>
        <label>Health Train3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPC_C1__c</fullName>
        <description>Constant 1(Intellectual Property Cost)</description>
        <label>Intellectual Property Cost C1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPC_C2__c</fullName>
        <description>Constant 2 (Intellectual_Property_Cost_C2)</description>
        <label>Intellectual Property Cost C2</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPC_C3__c</fullName>
        <description>Constant 3(Intellectual Property Cost )</description>
        <label>Intellectual Property Cost C3</label>
        <precision>18</precision>
        <scale>16</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LMSU10__c</fullName>
        <label>Price Users in LMS C10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMSU11__c</fullName>
        <label>Price Users in LMS C11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMSU12__c</fullName>
        <label>Price Users in LMS C12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMS_C1__c</fullName>
        <description>Constant C1 (LMS Fee)</description>
        <label>LMS Fee C1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMS_C2__c</fullName>
        <description>Constant C2(LMS Fee)</description>
        <label>LMS Fee C2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMS_C3__c</fullName>
        <description>Constant C3(LMS Fee)</description>
        <label>LMS Fee C3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1__c</fullName>
        <label>Multiple Library Access Model Charge C1</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2__c</fullName>
        <label>Multiple Library Access Model Charge C2</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M3__c</fullName>
        <label>Multiple Library Access Model Charge C3</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>S24__c</fullName>
        <defaultValue>100</defaultValue>
        <label>SFO Calrity Net 24</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>S25__c</fullName>
        <defaultValue>75</defaultValue>
        <label>SFO Clarity Net 25</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>S26__c</fullName>
        <defaultValue>50</defaultValue>
        <label>SFO Clarity Net 26</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SF24__c</fullName>
        <defaultValue>50</defaultValue>
        <label>SFO Series Pricing with Print Mtls 24</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SF25__c</fullName>
        <defaultValue>37.50</defaultValue>
        <label>SFO Series Pricing with Print Mtls 25</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SF26__c</fullName>
        <defaultValue>25.00</defaultValue>
        <label>SFO Series Pricing with Print Mtls 26</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SK1__c</fullName>
        <label>Skills1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SK2__c</fullName>
        <label>Skills2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SK3__c</fullName>
        <label>Skills3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SM__c</fullName>
        <defaultValue>0.33</defaultValue>
        <label>SFO Clarity net Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSWP_C1__c</fullName>
        <description>Constant C1(SCORM &amp; SCORMWrapper Production Fee)</description>
        <label>SCORM &amp; SCORMWrapper Production Fee C1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSWP_C2__c</fullName>
        <description>SCORM &amp; SCORMWrapper Production Fee</description>
        <label>SCORM &amp; SCORMWrapper Production Fee C2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSWP_C3__c</fullName>
        <description>Constant C3(SCORM &amp; SCORMWrapper Production Fee)</description>
        <label>SCORM &amp; SCORMWrapper Production Fee C3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSW_C1__c</fullName>
        <description>Constant C1(Price Server Setup New DES SCORM Wrapper)</description>
        <label>Price Server Setup New DES SCORM Wrap C1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SWC_C1__c</fullName>
        <description>Constant C1(Price SCORM Wrapper Production Fee)</description>
        <label>Price SCORM Wrapper Production Fee C1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SWC_C2__c</fullName>
        <description>Constant C2(Price SCORM Wrapper Production Fee)</description>
        <label>Price SCORM Wrapper Production Fee C2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SWC_C3__c</fullName>
        <description>Constant C3 (Price SCORM Wrapper Production Fee)</description>
        <label>Price SCORM Wrapper Production Fee C3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SingLibSafety1__c</fullName>
        <defaultValue>0.0000263157894736842</defaultValue>
        <label>Sing Lib Safety EC GOV HT Const1</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SingLibSafety2__c</fullName>
        <defaultValue>6.26315789473684</defaultValue>
        <label>Sing Lib Safety EC GOV HT Const2</label>
        <precision>18</precision>
        <scale>16</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SingLibSafety3__c</fullName>
        <defaultValue>0.39</defaultValue>
        <label>Sing Lib Safety EC GOV HT Const3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SingLib_Premium_Skills10__c</fullName>
        <defaultValue>0.75</defaultValue>
        <label>SingLib Premium Skills10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SingLib_Premium_Skills11__c</fullName>
        <defaultValue>0.84</defaultValue>
        <label>SingLib Premium Skills11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SingLib_Premium_Skills12__c</fullName>
        <defaultValue>0.63</defaultValue>
        <label>SingLib Premium Skills12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>c1__c</fullName>
        <defaultValue>0.94</defaultValue>
        <label>SingLibPremium Skills/PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>c2__c</fullName>
        <defaultValue>92.15</defaultValue>
        <label>SingLIb Premium Skills2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>c3__c</fullName>
        <defaultValue>0.16</defaultValue>
        <label>SingLib PremiumSkills3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>FF PSA eLearning Settings</label>
</CustomObject>